[Bugfix:Submission] Improve dark mode codemirror text highlight

--- a/site/public/css/code-mirror-utils.css
+++ b/site/public/css/code-mirror-utils.css
@@ -3,3 +3,19 @@
     text-decoration: red dotted underline;
     text-underline-position: under;
 }
+
+/* override monokai's highlighting to make it a bluish color with more contrast against text / background */
+.cm-s-monokai .CodeMirror-line::selection,
+.cm-s-monokai .CodeMirror-line > span::selection,
+.cm-s-monokai .CodeMirror-line > span > span::selection {
+    background: #3357a0;
+}
+.cm-s-monokai .CodeMirror-line::-moz-selection,
+.cm-s-monokai .CodeMirror-line > span::-moz-selection,
+.cm-s-monokai .CodeMirror-line > span > span::-moz-selection {
+    background: #3357a0;
+}
+
+.cm-s-monokai div.CodeMirror-selected {
+    background: #3357a0;
+}
